--- a/configuration/resources.yaml
+++ b/configuration/resources.yaml
@@ -17,7 +17,10 @@ resources:
       
    
   - key: rm-mockup   
-    server: rm-proxy-casual-mockup
+    server: /Users/Lazan/git/casual/tools/rm-proxy-casual-mockup
     xa_struct_name: casual_mockup_xa_switch_static
     libraries:
       - casual-mockup
+
+      
+  
