--- a/transaction/makefile.cmk
+++ b/transaction/makefile.cmk
@@ -23,11 +23,13 @@ LIBRARY_PATHS = bin \
 //
 // Compile and link the transaction manager
 //
-Compile( source/manager.cpp, obj/manager.o)    
+Compile( source/manager.cpp, obj/manager.o)
+Compile( source/manager_state.cpp, obj/manager_state.o)
 Compile( source/manager_main.cpp, obj/manager_main.o)
 
 LinkExecutable( casual-transaction-manager,\
     obj/manager.o \
+    obj/manager_state.o \
     obj/manager_main.o \
     ,\
     casual-sf casual-common casual-configuration sqlite3)
@@ -55,6 +57,7 @@ Compile( unittest/isolated/source/test_configuration.cpp, obj/test_configuration
 LinkIsolatedUnittest( test_transaction_configuration,\
     obj/test_configuration.o \
     obj/manager.o \
+    obj/manager_state.o \
     , \
     casual-common casual-sf casual-configuration sqlite3)
 
