--- a/configuration/makefile.cmk
+++ b/configuration/makefile.cmk
@@ -1,43 +1,49 @@
+from casual.make.functiondefinitions import *
 
-Include( $(CASUAL_BUILD_ENVIRONMENT))
+Include( "$(CASUAL_BUILD_ENVIRONMENT)")
 
-INCLUDE_PATHS= include \
-   ../common/include \
-   ../xatmi/include \
-   ../serviceframework/include \
-   $(JSON_INCLUDE_PATH) \
-   $(UNITTEST_INCLUDE_PATH)
-
-
-LIBRARY_PATHS = bin \
-    ../common/bin \
-    ../xatmi/bin \
-    ../serviceframework/bin \
-    $(JSON_LIBRARY_PATH)
+INCLUDE_PATHS= ["include",
+   "../common/include",
+   "../xatmi/include",
+   "../serviceframework/include",
+   "$(JSON_INCLUDE_PATH)",
+   "$(UNITTEST_INCLUDE_PATH)"]
 
 
+LIBRARY_PATHS = ["bin",
+    "../common/bin",
+    "../xatmi/bin",
+    "../serviceframework/bin",
+    "$(JSON_LIBRARY_PATH)"]
 
-Compile( source/domain.cpp, obj/domain.o)
-Compile( source/xa_switch.cpp, obj/xa_switch.o)
+SetIncludePaths( INCLUDE_PATHS)
+SetLibraryPaths( LIBRARY_PATHS)
 
-LinkLibrary( casual-configuration, \
-    obj/domain.o \
-    obj/xa_switch.o \
-    , \
-    casual-common \
-    casual-sf)
+Compile( "source/domain.cpp", "obj/domain.o")
+Compile( "source/xa_switch.cpp", "obj/xa_switch.o")
+
+LinkLibrary( "casual-configuration",
+    ["obj/domain.o",
+    "obj/xa_switch.o"],
+    ["casual-common",
+    "casual-sf"])
 
 
 
-//
-// Unittest
-//
-Compile( unittest/isolated/source/test_domain.cpp, obj/test_domain.o)
-Compile( unittest/isolated/source/test_xa_switch.cpp, obj/test_xa_switch.o)
+#
+# Unittest
+#
+Compile( "unittest/isolated/source/test_domain.cpp", "obj/test_domain.o")
+Compile( "unittest/isolated/source/test_xa_switch.cpp", "obj/test_xa_switch.o")
 
-LinkIsolatedUnittest( test_configuration, \
-   obj/test_domain.o \
-   obj/test_xa_switch.o \
-   ,\
-   casual-configuration casual-sf)  
+LinkIsolatedUnittest( "test_configuration",
+   ["obj/test_domain.o",
+   "obj/test_xa_switch.o"],
+   ["casual-configuration", "casual-sf"])  
+   
+#
+# Install
+#
+InstallLibrary("casual-configuration", "$CASUAL_HOME/lib/.")
+
 
