--- a/makefile.cmk
+++ b/makefile.cmk
@@ -1,16 +1,16 @@
+from casual.make.functiondefinitions import *
 
+Build( "common/makefile.cmk")
+Build( "xatmi/makefile.cmk")
 
-Build( common/makefile.cmk)
-Build( xatmi/makefile.cmk)
+Build( "serviceframework/makefile.cmk")
 
-Build( serviceframework/makefile.cmk)
+Build( "configuration/makefile.cmk")
 
-Build( configuration/makefile.cmk)
+Build( "test/makefile.cmk")
 
-Build( test/makefile.cmk)
+Build( "broker/makefile.cmk")
+Build( "monitor/makefile.cmk")
 
-Build( broker/makefile.cmk)
-Build( monitor/makefile.cmk)
-
-Build( transaction/makefile.cmk)
+Build( "transaction/makefile.cmk")
 
