--- a/test/makefile.cmk
+++ b/test/makefile.cmk
@@ -1,108 +1,117 @@
+from casual.make.functiondefinitions import *
+
+Include( "$(CASUAL_BUILD_ENVIRONMENT)")
 
 
-Include( $(CASUAL_BUILD_ENVIRONMENT))
-
-
-INCLUDE_PATHS= include \
-	../common/include \
-	../serviceframework/include \
-	../xatmi/include \
-	$(YAML_INCLUDE_PATH) \
-    $(UNITTEST_INCLUDE_PATH) \
+INCLUDE_PATHS= ["include",
+	"../common/include",
+	"../serviceframework/include",
+	"../xatmi/include",
+	"$(YAML_INCLUDE_PATH)",
+    "$(UNITTEST_INCLUDE_PATH)"]
 	
-LIBRARY_PATHS= ../xatmi/bin \
-	../common/bin \
-	../serviceframework/bin \
-	$(YAML_LIBRARY_PATH) \
-	$(JSON_LIBRARY_PATH) \
-	$(IBM_DB_LIB) \
+LIBRARY_PATHS= ["../xatmi/bin",
+	"../common/bin",
+	"../serviceframework/bin",
+	"$(YAML_LIBRARY_PATH)",
+	"$(JSON_LIBRARY_PATH)",
+	"$(IBM_DB_LIB)"]
+
+SetIncludePaths( INCLUDE_PATHS)
+SetLibraryPaths( LIBRARY_PATHS)
+
+Compile( "source/template_server.cpp", "obj/template_server.o")
+
+
+#LinkAtmiServer(test,,
+#	obj/template_server.o,,
+#	casual-xatmi casual-common,,
+#	"casual_test1,casual_test2,casual_test3")
 
 
 
-Compile( source/template_server.cpp, obj/template_server.o)
+Compile( "source/template_server_dispatcher.c", "obj/template_server_dispatcher.o")
 
-/*
-LinkAtmiServer(test, \
-	obj/template_server.o, \
-	casual-xatmi casual-common, \
-	"casual_test1,casual_test2,casual_test3")
-*/
-
-
-Compile( source/template_server_dispatcher.c, obj/template_server_dispatcher.o)
-
-LinkExecutable(test, \
-    obj/template_server_dispatcher.o \
-    obj/template_server.o, \
-    casual-xatmi casual-common casual-mockup)	
+LinkExecutable("test",
+    ["obj/template_server_dispatcher.o",
+    "obj/template_server.o"],
+    ["casual-xatmi", "casual-common", "casual-mockup"])	
     	
 
 
-//
-// Compile and link VO:n
-//
-Compile( source/sf_testvo.cpp, obj/sf_testvo.o)
+#
+# Compile and link VO:n
+#
+Compile( "source/sf_testvo.cpp", "obj/sf_testvo.o")
 
-LinkArchive( sf-test-vo, \
-    obj/sf_testvo.o)
+LinkArchive( "sf-test-vo",
+    ["obj/sf_testvo.o"])
 
 
-//
-// compile and link the sf-template-server
-//
-Compile( source/template_sf_server.cpp, obj/template_sf_server.o)
-Compile( source/template_sf_server_implementation.cpp, obj/template_sf_server_implementation.o)
+#
+# compile and link the sf-template-server
+#
+Compile( "source/template_sf_server.cpp", "obj/template_sf_server.o")
+Compile( "source/template_sf_server_implementation.cpp", "obj/template_sf_server_implementation.o")
 
-LinkAtmiServer(sf_test, \
-    obj/template_sf_server.o \
-    obj/template_sf_server_implementation.o, \
-    sf-test-vo \
-    casual-xatmi \
-    casual-common \
-    casual-sf, \
+LinkAtmiServer("sf_test",
+    ["obj/template_sf_server.o",
+    "obj/template_sf_server_implementation.o"],
+    ["sf-test-vo",
+    "casual-xatmi",
+    "casual-common",
+    "casual-sf"],
     "casual_sf_test1,casual_sf_test2")
 
 
 	
-Compile( source/template_client.cpp, obj/template_client.o)
+Compile( "source/template_client.cpp", "obj/template_client.o")
 
-LinkExecutable( test_client, \
-	obj/template_client.o, casual-common casual-xatmi)
+LinkExecutable( "test_client",
+	["obj/template_client.o"], ["casual-common", "casual-xatmi"])
 	
 
 
 
-Compile( source/test_multicall.cpp, obj/test_multicall.o)
+Compile( "source/test_multicall.cpp", "obj/test_multicall.o")
 
-LinkExecutable( test_multicall_client, \
-	obj/test_multicall.o, casual-common casual-xatmi)
+LinkExecutable( "test_multicall_client",
+	["obj/test_multicall.o"], ["casual-common", "casual-xatmi"])
 	
 	
 	
-//
-// unittest
-//
-Compile( unittest/isolated/source/test_yaml_sf_generation.cpp, unittest/isolated/obj/test_yaml_sf_generation.o)
+#
+# unittest
+#
+Compile( "unittest/isolated/source/test_yaml_sf_generation.cpp", "unittest/isolated/obj/test_yaml_sf_generation.o")
 
-LinkIsolatedUnittest( casual-test-isolated, \
-    unittest/isolated/obj/test_yaml_sf_generation.o, \
-    casual-sf casual-xatmi)
+LinkIsolatedUnittest( "casual-test-isolated",
+    ["unittest/isolated/obj/test_yaml_sf_generation.o"],
+    ["casual-sf", "casual-xatmi"])
 	
 	
-//
-// Compile and link detoct-generated vo and server
-//
-Compile( source/sf_testserverserver.cpp, obj/sf_testserverserver.o)
-Compile( source/sf_testserverimplementation.cpp, obj/sf_testserverimplementation.o)
+#
+# Compile and link detoct-generated vo and server
+#
+Compile( "source/sf_testserverserver.cpp", "obj/sf_testserverserver.o")
+Compile( "source/sf_testserverimplementation.cpp", "obj/sf_testserverimplementation.o")
 
-LinkAtmiServer(sf-detoct-test-server, \
-    obj/sf_testserverserver.o \
-    obj/sf_testserverimplementation.o, \
-    sf-test-vo \
-    casual-sf \
-    casual-xatmi, \
+LinkAtmiServer("sf-detoct-test-server",
+    ["obj/sf_testserverserver.o",
+    "obj/sf_testserverimplementation.o"],
+    ["sf-test-vo",
+    "casual-sf",
+    "casual-xatmi"],
     "casual_sf_test1,casual_sf_test2")
 
+#
+# Install
+#
+InstallExecutable("test","$CASUAL_HOME/bin/.")
+InstallExecutable("sf_test","$CASUAL_HOME/bin/.")
+InstallExecutable("test_client","$CASUAL_HOME/bin/.")
+InstallExecutable("test_multicall_client","$CASUAL_HOME/bin/.")
+InstallExecutable("sf-detoct-test-server","$CASUAL_HOME/bin/.")
 
 	
 	
