--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -87,6 +87,7 @@ Compile( "unittest/isolated/source/test_string.cpp", "unittest/isolated/obj/test
 Compile( "unittest/isolated/source/test_error.cpp", "unittest/isolated/obj/test_error.o")
 
 Compile( "unittest/isolated/source/test_signal.cpp", "unittest/isolated/obj/test_signal.o")
+Compile( "unittest/isolated/source/test_types.cpp", "unittest/isolated/obj/test_types.o")
 
 
 LinkIsolatedUnittest( "casual-common-isolated", 
@@ -102,7 +103,8 @@ LinkIsolatedUnittest( "casual-common-isolated",
     "unittest/isolated/obj/test_process.o",
     "unittest/isolated/obj/test_string.o",
     "unittest/isolated/obj/test_error.o",
-    "unittest/isolated/obj/test_signal.o"],
+    "unittest/isolated/obj/test_signal.o", 
+    "unittest/isolated/obj/test_types.o"],
 	["casual-common"] )	
 
 #
