Added admin service _broker_updateInstances that either boots or shutsdown instances for a given server (alias) so it correspond to the wanted instances
Also added corresponding functianlity to casual-broker-admin.

Changed the build so we link a mockup-resource-proxy, without having to do it with casual-build-resource-proxy, hence we can have test-services that links and "uses" mockup-rm

--- a/configuration/resources.yaml
+++ b/configuration/resources.yaml
@@ -17,7 +17,7 @@ resources:
       
    
   - key: rm-mockup   
-    server: /Users/Lazan/git/casual/tools/rm-proxy-casual-mockup
+    server: rm-proxy-casual-mockup
     xa_struct_name: casual_mockup_xa_switch_static
     libraries:
       - casual-mockup
