--- a/xatmi/makefile.cmk
+++ b/xatmi/makefile.cmk
@@ -5,7 +5,8 @@ INCLUDE_PATHS = [ "include",
 	"$(UNITTEST_INCLUDE_PATH)"]
 
 LIBRARY_PATHS = ["bin",
-    "../common/bin"]
+    "../common/bin",
+    "../buffers/bin"]
 
 SetIncludePaths( INCLUDE_PATHS)
 SetLibraryPaths( LIBRARY_PATHS)
@@ -16,12 +17,13 @@ Compile( "source/xatmi_server.cpp", "obj/xatmi_server.o")
 Compile( "source/xa.cpp", "obj/xa.o")
 Compile( "source/tx.cpp", "obj/tx.o")
 
-
 LinkLibrary( "casual-xatmi",
-	["obj/xatmi.o",
+	[
+	"obj/xatmi.o",
 	"obj/xatmi_server.o",
 	"obj/xa.o",
-	"obj/tx.o"],
+	"obj/tx.o",
+	],
 	["casual-common"])
 
 	
@@ -32,10 +34,12 @@ Compile( "unittest/isolated/source/test_buffer.cpp", "unittest/isolated/obj/test
 
 
 LinkIsolatedUnittest( "casual-xatmi-isolated",
-    ["unittest/isolated/obj/test_buffer.o"],
+    [
+    "unittest/isolated/obj/test_buffer.o",
+    ],
     ["casual-xatmi"])
+
 #
 # Install
 #    
 InstallLibrary("casual-xatmi", "$CASUAL_HOME/lib/.")
-    
