--- a/monitor/makefile.cmk
+++ b/monitor/makefile.cmk
@@ -13,6 +13,7 @@ INCLUDE_PATHS= ["include",
 
 LIBRARY_PATHS = ["bin",
     "../common/bin",
+    "../buffers/bin",
     "../xatmi/bin",
     "../serviceframework/bin",
     "$(JSON_LIBRARY_PATH)"]
