--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -22,6 +22,7 @@ Compile( "source/server_context.cpp", "obj/server_context.o")
 Compile( "source/calling_context.cpp", "obj/calling_context.o")
 Compile( "source/buffer_context.cpp", "obj/buffer_context.o")
 Compile( "source/transaction_context.cpp", "obj/transaction_context.o")
+Compile( "source/transaction_id.cpp", "obj/transaction_id.o")
 Compile( "source/ipc.cpp", "obj/ipc.o")
 Compile( "source/queue.cpp", "obj/queue.o")
 
@@ -40,6 +41,7 @@ LinkLibrary( "casual-common",
 	"obj/calling_context.o",
 	"obj/buffer_context.o",
 	"obj/transaction_context.o",
+    "obj/transaction_id.o",
 	"obj/ipc.o",
 	"obj/queue.o",
 	"obj/uuid.o",
@@ -89,9 +91,14 @@ Compile( "unittest/isolated/source/test_error.cpp", "unittest/isolated/obj/test_
 Compile( "unittest/isolated/source/test_signal.cpp", "unittest/isolated/obj/test_signal.o")
 Compile( "unittest/isolated/source/test_types.cpp", "unittest/isolated/obj/test_types.o")
 
+Compile( "unittest/isolated/source/test_transaction_id.cpp", "unittest/isolated/obj/test_transaction_id.o")
+
+
+
 
 LinkIsolatedUnittest( "casual-common-isolated", 
-	["unittest/isolated/obj/test_buffer.o",
+	[
+     "unittest/isolated/obj/test_buffer.o",
 	"unittest/isolated/obj/test_ipc.o",
 	"unittest/isolated/obj/test_marshal.o",
 	"unittest/isolated/obj/test_queue.o",
@@ -104,8 +111,12 @@ LinkIsolatedUnittest( "casual-common-isolated",
     "unittest/isolated/obj/test_string.o",
     "unittest/isolated/obj/test_error.o",
     "unittest/isolated/obj/test_signal.o", 
-    "unittest/isolated/obj/test_types.o"],
-	["casual-common", "casual-mockup"] )	
+    "unittest/isolated/obj/test_types.o",
+    "unittest/isolated/obj/test_transaction_id.o"
+    ],
+	[
+     "casual-common",
+     "casual-mockup"] )	
 
 #
 # Install
