--- a/buffers/makefile.cmk
+++ b/buffers/makefile.cmk
@@ -25,12 +25,16 @@ LinkLibrary( "casual-buffers",
 #
 # unittest
 #
+Compile( "unittest/isolated/source/test_casual_octet_buffer.cpp", "unittest/isolated/obj/test_casual_octet_buffer.o")
 Compile( "unittest/isolated/source/test_casual_order_buffer.cpp", "unittest/isolated/obj/test_casual_order_buffer.o")
+Compile( "unittest/isolated/source/test_casual_string_buffer.cpp", "unittest/isolated/obj/test_casual_string_buffer.o")
 
 
 LinkIsolatedUnittest( "casual-buffers-isolated",
     [
+    "unittest/isolated/obj/test_casual_octet_buffer.o",
     "unittest/isolated/obj/test_casual_order_buffer.o",
+    "unittest/isolated/obj/test_casual_string_buffer.o",
     ],
     ["casual-buffers"])
 
