--- a/buffers/makefile.cmk
+++ b/buffers/makefile.cmk
@@ -10,12 +10,14 @@ SetIncludePaths( INCLUDE_PATHS)
 SetLibraryPaths( LIBRARY_PATHS)
 
 
+Compile( "source/casual_field_buffer.cpp", "obj/casual_field_buffer.o")
 Compile( "source/casual_octet_buffer.cpp", "obj/casual_octet_buffer.o")
 Compile( "source/casual_order_buffer.cpp", "obj/casual_order_buffer.o")
 Compile( "source/casual_string_buffer.cpp", "obj/casual_string_buffer.o")
 
 LinkLibrary( "casual-buffers",
 	[
+	"obj/casual_field_buffer.o",
 	"obj/casual_octet_buffer.o",
 	"obj/casual_order_buffer.o",
 	"obj/casual_string_buffer.o",
