--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -8,6 +8,7 @@ else:
 INCLUDE_PATHS=[ 
     'include',
 	'../xatmi/include',
+	'../buffers/include',
 	'../transaction/include',
 	'../serviceframework/include',
 	'../buffers/include',
@@ -36,8 +37,17 @@ Compile( "source/error.cpp", "obj/error.o")
 Compile( "source/chronology.cpp", "obj/chronology.o")
 Compile( "source/process.cpp", "obj/process.o")
 
+Compile( "source/field_buffer.cpp", "obj/field_buffer.o")
+Compile( "source/octet_buffer.cpp", "obj/octet_buffer.o")
+Compile( "source/order_buffer.cpp", "obj/order_buffer.o")
+Compile( "source/string_buffer.cpp", "obj/string_buffer.o")
+
+
+
+
 LinkLibrary( "casual-common", 
-	["obj/server_context.o",
+	[
+	"obj/server_context.o",
 	"obj/calling_context.o",
 	"obj/buffer_context.o",
 	"obj/transaction_context.o",
@@ -51,8 +61,13 @@ LinkLibrary( "casual-common",
 	"obj/logger.o",
 	"obj/error.o",
 	"obj/chronology.o",
-	"obj/process.o"],
-	[UUIDLIB, 'casual-buffers'])
+	"obj/process.o",
+	"obj/field_buffer.o",
+	"obj/octet_buffer.o",
+	"obj/order_buffer.o",
+	"obj/string_buffer.o",
+	],
+	[UUIDLIB])
 
 
 #
@@ -90,9 +105,14 @@ Compile( "unittest/isolated/source/test_error.cpp", "unittest/isolated/obj/test_
 Compile( "unittest/isolated/source/test_signal.cpp", "unittest/isolated/obj/test_signal.o")
 Compile( "unittest/isolated/source/test_types.cpp", "unittest/isolated/obj/test_types.o")
 
+Compile( "unittest/isolated/source/test_octet_buffer.cpp", "unittest/isolated/obj/test_octet_buffer.o")
+Compile( "unittest/isolated/source/test_order_buffer.cpp", "unittest/isolated/obj/test_order_buffer.o")
+Compile( "unittest/isolated/source/test_string_buffer.cpp", "unittest/isolated/obj/test_string_buffer.o")
+
 
 LinkIsolatedUnittest( "casual-common-isolated", 
-	["unittest/isolated/obj/test_buffer.o",
+	[
+	"unittest/isolated/obj/test_buffer.o",
 	"unittest/isolated/obj/test_ipc.o",
 	"unittest/isolated/obj/test_marshal.o",
 	"unittest/isolated/obj/test_queue.o",
@@ -105,7 +125,11 @@ LinkIsolatedUnittest( "casual-common-isolated",
     "unittest/isolated/obj/test_string.o",
     "unittest/isolated/obj/test_error.o",
     "unittest/isolated/obj/test_signal.o", 
-    "unittest/isolated/obj/test_types.o"],
+    "unittest/isolated/obj/test_types.o",
+    "unittest/isolated/obj/test_octet_buffer.o",
+    "unittest/isolated/obj/test_order_buffer.o",
+    "unittest/isolated/obj/test_string_buffer.o",
+    ],
 	["casual-common", "casual-mockup"] )	
 
 #
