Implemented 'parameter' protocol wrapper. Now sf-servers log input and output paramaters, non intrusive, if CASUAL_LOG has parameter as a category

--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -26,7 +26,7 @@ Compile( "source/buffer.cpp", "obj/buffer.o")
 Compile( "source/server.cpp", "obj/server.o")
 Compile( "source/service.cpp", "obj/service.o")
 Compile( "source/service_protocol.cpp", "obj/service_protocol.o")
-Compile( "source/archive_logger.cpp", "obj/archive_logger.o")
+Compile( "source/archive_log.cpp", "obj/archive_log.o")
 Compile( "source/xatmi_call.cpp", "obj/xatmi_call.o")
 
 Compile( "source/trace.cpp", "obj/trace.o")
@@ -38,7 +38,7 @@ LinkLibrary( "casual-sf",
     "obj/server.o",
     "obj/service.o",
     "obj/service_protocol.o",
-    "obj/archive_logger.o",
+    "obj/archive_log.o",
     "obj/xatmi_call.o",
     "obj/trace.o"
     ],
