Replaced sf/types.h with sf/platform.h. The same look and feel as in common

--- a/serviceframework/makefile.cmk
+++ b/serviceframework/makefile.cmk
@@ -28,6 +28,7 @@ Compile( "source/service.cpp", "obj/service.o")
 Compile( "source/service_protocol.cpp", "obj/service_protocol.o")
 Compile( "source/archive_log.cpp", "obj/archive_log.o")
 Compile( "source/xatmi_call.cpp", "obj/xatmi_call.o")
+Compile( "source/platform.cpp", "obj/platform.o")
 
 Compile( "source/trace.cpp", "obj/trace.o")
 
@@ -40,7 +41,8 @@ LinkLibrary( "casual-sf",
     "obj/service_protocol.o",
     "obj/archive_log.o",
     "obj/xatmi_call.o",
-    "obj/trace.o"
+    "obj/trace.o",
+    "obj/platform.o"
     ],
     ["casual-common", "casual-xatmi", "yaml-cpp", "json-c"])
 
