--- a/common/makefile.cmk
+++ b/common/makefile.cmk
@@ -15,7 +15,7 @@ INCLUDE_PATHS=[
 	'$(UNITTEST_INCLUDE_PATH)'
 	]
 
-LIBRARY_PATHS= ['../buffers/bin']
+LIBRARY_PATHS= []
 
 SetIncludePaths( INCLUDE_PATHS)
 SetLibraryPaths( LIBRARY_PATHS)
@@ -39,12 +39,6 @@ Compile( "source/chronology.cpp", "obj/chronology.o")
 Compile( "source/process.cpp", "obj/process.o")
 Compile( "source/network_byteorder.cpp", "obj/network_byteorder.o")
 
-Compile( "source/field_buffer.cpp", "obj/field_buffer.o")
-Compile( "source/octet_buffer.cpp", "obj/octet_buffer.o")
-Compile( "source/order_buffer.cpp", "obj/order_buffer.o")
-Compile( "source/string_buffer.cpp", "obj/string_buffer.o")
-
-
 
 
 LinkLibrary( "casual-common", 
@@ -66,10 +60,6 @@ LinkLibrary( "casual-common",
 	"obj/chronology.o",
 	"obj/process.o",
 	"obj/network_byteorder.o",
-	"obj/field_buffer.o",
-	"obj/octet_buffer.o",
-	"obj/order_buffer.o",
-	"obj/string_buffer.o",
 	],
 	[UUIDLIB])
 
@@ -110,10 +100,8 @@ Compile( "unittest/isolated/source/test_network_byteorder.cpp", "unittest/isolat
 Compile( "unittest/isolated/source/test_signal.cpp", "unittest/isolated/obj/test_signal.o")
 
 Compile( "unittest/isolated/source/test_transaction_id.cpp", "unittest/isolated/obj/test_transaction_id.o")
-Compile( "unittest/isolated/source/test_field_buffer.cpp", "unittest/isolated/obj/test_field_buffer.o")
-Compile( "unittest/isolated/source/test_octet_buffer.cpp", "unittest/isolated/obj/test_octet_buffer.o")
-Compile( "unittest/isolated/source/test_order_buffer.cpp", "unittest/isolated/obj/test_order_buffer.o")
-Compile( "unittest/isolated/source/test_string_buffer.cpp", "unittest/isolated/obj/test_string_buffer.o")
+Compile( "unittest/isolated/source/test_algorithm.cpp", "unittest/isolated/obj/test_algorithm.o")
+
 
 
 LinkIsolatedUnittest( "casual-common-isolated", 
@@ -134,10 +122,6 @@ LinkIsolatedUnittest( "casual-common-isolated",
     "unittest/isolated/obj/test_signal.o", 
     "unittest/isolated/obj/test_transaction_id.o",
     "unittest/isolated/obj/test_algorithm.o",
-    "unittest/isolated/obj/test_field_buffer.o",
-    "unittest/isolated/obj/test_octet_buffer.o",
-    "unittest/isolated/obj/test_order_buffer.o",
-    "unittest/isolated/obj/test_string_buffer.o",
     ],
 	[
      "casual-common",
