--- a/tools/makefile.cmk
+++ b/tools/makefile.cmk
@@ -13,7 +13,7 @@ SetIncludePaths( ["include",
     "$(UNITTEST_INCLUDE_PATH)"])
 
 SetLibraryPaths( ["bin",
-    "../buffers/bin",
+    "../buffer/bin",
     "../common/bin",
     "../xatmi/bin",
     "../configuration/bin",
